Fix text alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,10 @@
   height: 100%;
   background: var(--primary);
   position: relative;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .time span {
